--- a/docs/_includes/news_contents.html
+++ b/docs/_includes/news_contents.html
@@ -1,11 +1,11 @@
 <div class="unit one-fifth hide-on-mobiles">
   <aside>
     <ul>
-      <li {%- if page.title == 'News' %} class="current" {%- endif %}>
-        <a href="{{ '/news/' | relative_url }}">All News</a>
+      <li {%- if page.title == 'Things' %} class="current" {%- endif %}>
+        <a href="{{ '/things/' | relative_url }}">All Things</a>
       </li>
       <li {%- if page.title == 'Releases' %} class="current" {%- endif %}>
-        <a href="{{ '/news/releases/' | relative_url }}">Jekyll Releases</a>
+        <a href="{{ '/things/releases/' | relative_url }}">Jekyll Releases</a>
       </li>
     </ul>
     <h4>Recent Releases</h4>
@@ -19,7 +19,7 @@
         <a href="{{ '/docs/history/' | relative_url }}">History »</a>
       </li>
     </ul>
-    <h4>Other News</h4>
+    <h4>Other Things</h4>
     <ul>
     {% for post in site.posts -%}
       {% unless post.categories contains 'release' -%}
